# xiaoxuan-core-runtime

./: Cargo.toml  README.md  clean-output.sh  run-test-single-thread.sh  rust-toolchain.toml  start-test-with-single-thread.sh
.cargo/: config.toml
crates/main/: Cargo.toml
crates/main/src/: main.rs
docs/: anc_folder_hierarchy.md  anc_root_folder_hierarchy.md  application_name.md  application_name_path.md  command_anc.md  command_ancrt.md  crates_dependent_tree.md  folder_hierarchy_anc.md  folder_hierarchy_module.md  folder_hierarchy_output.md  home_folder_hierarchy.md  launcher_commands.md  module_configuration.md  module_folder_hierarchy.md  module_output_folder_hierarchy.md  output_folder.md  pathes.md  publish_as_linux_system_package.md  resource_locations.md  runtime_commands.md  runtime_environment.md  system_package_contributors.md  the_launcher_executable.md  the_runtime_executable.md
src/: builder.rs  common.rs  entry.rs  fetcher.rs  lib.rs  loader.rs  locations.rs  main.rs  runner.rs  source_scanner.rs
tests/resources/hello_world_linux_libc/: module.anc.ason
tests/resources/hello_world_linux_libc/src/: main.anca
tests/resources/hello_world_linux_syscall_x86_64/: module.anc.ason
tests/resources/hello_world_linux_syscall_x86_64/src/: lib.anca  main.anca
tests/resources/multiple_module_app/base/: module.anc.ason
tests/resources/multiple_module_app/base/src/: lib.anca  primitive.anca
tests/resources/multiple_module_app/cli/: module.anc.ason
tests/resources/multiple_module_app/cli/src/: lib.anca  main.anca
tests/resources/multiple_module_app/main/: module.anc.ason
tests/resources/multiple_module_app/math/: module.anc.ason
tests/resources/multiple_module_app/math/src/: lib.anca
tests/resources/multiple_modules/app/: module.anc.ason
tests/resources/multiple_modules/app/src/: lib.anca  main.anca
tests/resources/multiple_modules/base/: module.anc.ason
tests/resources/multiple_modules/base/src/: lib.anca  primitive.anca
tests/resources/multiple_modules/medium/: module.anc.ason
tests/resources/multiple_modules/medium/src/: lib.anca
tests/resources/single-module-app/: module.anc.ason
tests/resources/single-module-app/src/: base.anca  lib.anca  main.anca  medium.anca
tests/resources/single_file_app/: no_conf.anca  noconf.anca  with_conf.anca  withconf.anca
tests/resources/single_module_app/: module.anc.ason
tests/resources/single_module_app/src/: base.anca  lib.anca  math.anca  medium.anca
tests/resources/single_module_app_with_executable_units/: module.anc.ason
tests/resources/single_module_app_with_executable_units/app/: bar.anca  foo.anca
tests/resources/single_module_app_with_executable_units/src/: lib.anca  main.anca
tests/resources/single_module_with_multiple_executable_units/: module.anc.ason
tests/resources/single_module_with_multiple_executable_units/app/: bar.anca  foo.anca
tests/resources/single_module_with_multiple_executable_units/src/: lib.anca  main.anca
tests/resources/single_module_with_unit_tests/: module.anc.ason
tests/resources/single_module_with_unit_tests/src/: lib.anca
tests/resources/single_module_with_unit_tests/tests/: bar.anca  foo.anca
