[package]
name = "anc-runtime"
version = "0.2.0"
edition = "2021"

[dependencies]
anc-isa = { path = "../xiaoxuan-core-isa" }
anc-image = { path = "../xiaoxuan-core-image" }
anc-processor = { path = "../xiaoxuan-core-vm/crates/processor" }
anc-context = { path = "../xiaoxuan-core-vm/crates/context" }
anc-parser-asm = { path = "../xiaoxuan-core-assembly/crates/parser" }
anc-assembler = { path = "../xiaoxuan-core-assembly/crates/assembler" }
anc-linker = { path = "../xiaoxuan-core-linker" }
serde = { version = "1.0.216", features = ["derive"] }
ason = "1.4.0"
gix = { version = "0.70.0", features = [
    "worktree-mutation",
    "blocking-network-client",
    "blocking-http-transport-reqwest-rust-tls",
] }
clap = "4.5.27"
memmap2 = "0.9.5"

[dev-dependencies]
pretty_assertions = "1.4.0"
