[package]
name = "ancrt_main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ancasm_assembler = { path = "../../../xiaoxuan-core-assembly/crates/assembler" }
ancasm_parser = { path = "../../../xiaoxuan-core-assembly/crates/parser" }
ancvm_types = { path = "../../../xiaoxuan-core-vm/crates/types" }
ancvm_binary = { path = "../../../xiaoxuan-core-vm/crates/binary" }
ancvm_processor = { path = "../../../xiaoxuan-core-vm/crates/processor" }
ancvm_context = { path = "../../../xiaoxuan-core-vm/crates/context" }
ason = "0.1.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
ancvm_syscall_util = { path = "../../../xiaoxuan-core-vm/crates/syscall_util" }
ancvm_extfunc_util = { path = "../../../xiaoxuan-core-vm/crates/extfunc_util" }
libc = "0.2"
